# ardupilot

./: .gitignore  CLAUDE.md  DEMONSTRATION.md  GITHUB_SETUP.md  README.md  SITL_Demo_Guide.md  demo_bridge_inspection.py  demo_ocean_tracker.py  demo_standalone.py  example_commands.md  push_commands.sh  push_instructions.md  requirements.txt  run_traffic_swarm_demo.py  sample_report.html  setup_github.sh  test_basic.py  test_basic_functionality.py  test_installation.py  test_ocean_tracker.py  verify_codebase.py  visual_demo.py  visualize_ocean_cleanup.py  visualize_traffic_demo.py
config/: mission_config.yaml  ocean_survey_config.json  smart_city_traffic.json
examples/: demo_mission_plan.txt  example_golden_gate.py
hexacopter_control/: BUILD_STATUS.md  CMakeLists.txt  Makefile  README.md  wscript
hexacopter_control/docs/: unified_estimation_theory.md
hexacopter_control/examples/: integrated_control_example.cpp
hexacopter_control/include/: ap_math_compat.h  ekf_attitude_velocity.h  ekf_attitude_velocity_adaptive.h  hexacopter_sysid.h  unified_estimator.h  velocity_feedback_controller.h
hexacopter_control/src/: ekf_attitude_velocity.cpp  ekf_attitude_velocity_adaptive.cpp  hexacopter_sysid.cpp  unified_estimator.cpp  velocity_feedback_controller.cpp
hexacopter_control/tests/: test_build.cpp  test_hexacopter_control.py
scripts/: monitor_mission.py  quick_demo.sh  run_inspection.py
src/: defect_detector.py  inspection_controller.py  ocean_plastic_detector.py  pattern_generator.py  report_generator.py  safety_monitor.py  traffic_swarm_controller.py
swarm_demo/: README.md  launch_swarm.sh  swarm_control.py  (+1 more)
